--- a/web/list.xhtml
+++ b/web/list.xhtml
@@ -31,7 +31,7 @@
             <h1>Kategorien</h1>
 	</div>
         <div id="nav">
-            <img src="img/logo.png" />
+            <img src="img/logo.svg" />
             <a href="index.xhtml" class="section1">Dashboard</a>
             <a class="section1" data-toggle="collapse" data-target="#adding_collapse">Erfassung</a>		
             <div id="adding_collapse" class="collapse">
