intervall items which are not implemented are now disabled

--- a/web/list.xhtml
+++ b/web/list.xhtml
@@ -73,11 +73,11 @@
                 <div id="incomeTab" class="tab-pane fade in active">
                     <div class="selectionIntervall">
                         <select>
-                            <option>Woche</option>
+                            <option disabled="true">Woche</option>
                             <option selected="true">Monat</option>
-                            <option>Quartal</option>
-                            <option>Halbjahr</option>
-                            <option>Jahr</option>
+                            <option disabled="true">Quartal</option>
+                            <option disabled="true">Halbjahr</option>
+                            <option disabled="true">Jahr</option>
                         </select>
                     </div>
                     <center>
