--- a/web/list.xhtml
+++ b/web/list.xhtml
@@ -39,6 +39,25 @@
                     options: options
                 });
             }
+            function drawPieOut() {
+                var ctx = document.getElementById("piechartOutcome");
+                var data = {
+                    datasets: [{
+                        data: [#{master.outMonthData}],
+                        backgroundColor: [#{master.outMonthColor}],
+                        label: "Ausgaben"
+                    }],
+                    labels: [#{master.outMonthLabel}]
+                };
+                var options = {
+                    responsive: false
+                };
+                var myPieChart = new Chart(ctx,{
+                    type: 'pie',
+                    data: data,
+                    options: options
+                });
+            }
             $(document).ready(function() {
                 drawPieIn();
                 drawPieOut();
@@ -120,11 +139,11 @@
                 <div id="outcomeTab" class="tab-pane fade">
                     <div class="selectionIntervall">
                         <select>
-                            <option>Woche</option>
-                            <option>Monat</option>
-                            <option>Quartal</option>
-                            <option>Halbjahr</option>
-                            <option>Jahr</option>
+                            <option disabled="true">Woche</option>
+                            <option selected="true">Monat</option>
+                            <option disabled="true">Quartal</option>
+                            <option disabled="true">Halbjahr</option>
+                            <option disabled="true">Jahr</option>
                         </select>
                     </div>
                     <center>
@@ -133,7 +152,7 @@
                         </div>
                     </center>
                     <div id="list">
-                        <h:dataTable value="#{master.listLastTen}" var="pay" 
+                        <h:dataTable value="#{master.outMonthList}" var="pay" 
                                     styleClass="table-hover table">
                             <h:column>
                                     <f:facet name = "header">Datum</f:facet>    				
