--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -43,8 +43,8 @@
             <a href="index.xhtml" class="section1">Dashboard</a>
             <a class="section1" data-toggle="collapse" data-target="#adding_collapse">Erfassung</a>		
             <div id="adding_collapse" class="collapse">
-                <a href="" class="section2">Einnahme</a>
-                <a href="" class="section2">Ausgabe</a>
+                <a href="" class="section2" data-toggle="modal" data-target="#addingModal" onclick="dashboard('income', 'outcome');">Einnahme</a>
+                <a href="" class="section2" data-toggle="modal" data-target="#addingModal" onclick="dashboard('outcome', 'income');">Ausgabe</a>
             </div> 
             <a class="section1" data-toggle="collapse" data-target="#overview_collapse">Übersicht</a>
             <div id="overview_collapse" class="collapse">
@@ -165,15 +165,15 @@
                     </div>
                     <div class="modal-body">
                         <h:form>
-                            <fieldset> 
+                            <fieldset id="radios"> 
                                 <table width="100%">
                                     <tr>
                                         <td>
-                                            <input type="radio" onclick="income('income', 'outcome')" id="in" value="income" name="payments" checked="checked"/> 
+                                            <input type="radio" onclick="income('income', 'outcome')" id="radio_income" value="income" name="payments" checked="checked"/> 
                                             <label for="in">Einnahme</label>
                                         </td>
                                         <td>
-                                            <input type="radio" onclick="outcome('outcome', 'income')" id="out" value="outcome" name="payments" /> 
+                                            <input type="radio" onclick="outcome('outcome', 'income')" id="radio_outcome" value="outcome" name="payments" /> 
                                             <label for="out">Ausgabe</label>
                                         </td>
                                     </tr>
@@ -188,9 +188,9 @@
                                                     <p>Kategorie:</p>
                                                 </td>
                                                 <td>
-                                                    <h:selectOneMenu>
+                                                    <h:selectOneMenu id="category_in" binding="#{category_in}">
                                                         <f:selectItems value="#{master.categoriesIncome}" var="c"
-                                                                       itemLabel="#{c.name}" itemValue="#{c.name}" />
+                                                                       itemLabel="#{c.name}" itemValue="#{c.id}" />
                                                     </h:selectOneMenu>
                                                     <button type="button" data-toggle="modal" data-target="#addingKategorieEinnahme">Hinzufügen</button>
                                                 </td>                                     
@@ -200,7 +200,7 @@
                                                     <p>Betrag:</p>
                                                 </td>
                                                 <td>
-                                                    <input type="number" id="Betrag" name="Betrag" step="0.01"></input> €
+                                                    <h:inputText id="amount_in" binding="#{amount_in}"/> €
                                                 </td>                                        
                                             </tr>
                                             <tr>
@@ -208,9 +208,9 @@
                                                     <p>Person:</p>
                                                 </td>
                                                 <td>
-                                                    <h:selectOneMenu>
+                                                    <h:selectOneMenu id="person_in" binding="#{person_in}">
                                                         <f:selectItems value="#{master.person}" var="p"
-                                                                       itemLabel="#{p.name}" itemValue="#{p.name}" />
+                                                                       itemLabel="#{p.name}" itemValue="#{p.id}" />
                                                     </h:selectOneMenu>
                                                     <button type="button" data-toggle="modal" data-target="#addingPerson">Hinzufügen</button>
                                                 </td>
@@ -220,10 +220,10 @@
                                                     <p>Notiz:</p>
                                                 </td>
                                                 <td>
-                                                    <textarea id="Notiz" name="Notiz" cols="35" rows="4"></textarea>
+                                                    <h:inputTextarea id="note_in" cols="35" rows="4" value="#{note_in}"/>
                                                 </td>                                        
                                             </tr>
-                                            <tr><td><button type="button">Hinzufügen</button></td></tr>
+                                            <tr><td><p:commandButton id="cb_in" value = "Hinzufügen" action="#{master.addPaymentIncome(person_in.value, category_in.value, amount_in.value, note_in)}" onclick="index.xhtml" /></td></tr>
                                         </table>
                                     </fieldset>
                                 </div>
@@ -235,9 +235,9 @@
                                                     <p>Kategorie:</p>
                                                 </td>
                                                 <td>
-                                                    <h:selectOneMenu>
+                                                    <h:selectOneMenu id="category_out" binding="#{category_out}">
                                                         <f:selectItems value="#{master.categoriesOutcome}" var="c"
-                                                                       itemLabel="#{c.name}" itemValue="#{c.name}" />
+                                                                       itemLabel="#{c.name}" itemValue="#{c.id}" />
                                                     </h:selectOneMenu>
                                                     <button type="button" data-toggle="modal" data-target="#addingKategorieAusgabe">Hinzufügen</button>
                                                 </td>                                     
@@ -247,7 +247,7 @@
                                                     <p>Betrag:</p>
                                                 </td>
                                                 <td>
-                                                    <input type="number" id="Betrag" name="Betrag" step="0.01"></input> €
+                                                    <h:inputText id="amount_out" binding="#{amount_out}"/> €
                                                 </td>                                        
                                             </tr>
                                             <tr>
@@ -255,9 +255,9 @@
                                                     <p>Person:</p>
                                                 </td>
                                                 <td>
-                                                    <h:selectOneMenu>
+                                                    <h:selectOneMenu id="person_out" binding="#{person_out}">
                                                         <f:selectItems value="#{master.person}" var="p"
-                                                                       itemLabel="#{p.name}" itemValue="#{p.name}" />
+                                                                       itemLabel="#{p.name}" itemValue="#{p.id}" />
                                                     </h:selectOneMenu>
                                                     <button type="button" data-toggle="modal" data-target="#addingPerson">Hinzufügen</button>
                                                 </td>
@@ -267,10 +267,10 @@
                                                     <p>Notiz:</p>
                                                 </td>
                                                 <td>
-                                                    <textarea id="Notiz" name="Notiz" cols="35" rows="4"></textarea>
+                                                    <h:inputTextarea id="note_out" cols="35" rows="4" value="#{note_out}"/>
                                                 </td>                                        
                                             </tr>
-                                            <tr><td><button type="button">Hinzufügen</button></td></tr>
+                                            <tr><td><p:commandButton id="cb_out" value = "Hinzufügen" action="#{master.addPaymentOutcome(person_out.value, category_out.value, amount_out.value, note_out)}" onclick="index.xhtml" /></td></tr>
                                         </table>
                                     </fieldset>
                                 </div>
@@ -291,8 +291,8 @@
                     <div class="modal-body">
                         <h:form id="Category_income">
                         Name der Kategorie für Einnahmen:
-                            <h:inputText id="category_income" binding="#{Category}" />
-                            <p:commandButton value = "Hinzufügen" action="#{master.addCategory(Category.value, true)}" onclick="index.xhtml" />
+                            <h:inputText id="category_income" binding="#{Category_in}" />
+                            <p:commandButton value = "Hinzufügen" action="#{master.addCategory(Category_in.value, true)}" onclick="index.xhtml" />
                         </h:form>
                     </div>
                 </div>
@@ -309,8 +309,8 @@
                     <div class="modal-body">
                         <h:form id="Category_outcome">
                         Name der Kategorie für Einnahmen:
-                            <h:inputText id="category_outcome" binding="#{Category}" />
-                            <p:commandButton value = "Hinzufügen" action="#{master.addCategory(Category.value, false)}" onclick="index.xhtml" />
+                            <h:inputText id="category_outcome" binding="#{Category_out}" />
+                            <p:commandButton value = "Hinzufügen" action="#{master.addCategory(Category_out.value, false)}" onclick="index.xhtml" />
                         </h:form>
                     </div>
                 </div>
